testdata/baselines/reference/submodule/conformance/jsDeclarationsCommonjsRelativePath.errors.txt
reexport.js(2,23): error TS2307: Cannot find module './thing' or its corresponding type declarations.
reexport.js(3,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== reexport.js (2 errors) ====
    'use strict';
    const Thing = require('./thing').Thing
                          ~~~~~~~~~
!!! error TS2307: Cannot find module './thing' or its corresponding type declarations.
    module.exports = { Thing }
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
==== thing.js (0 errors) ====
    'use strict';
    class Thing {}
    module.exports = { Thing }
    